--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -24,15 +24,22 @@
     "\n",
     "### [Network Architecture]\n",
     "\n",
-    ">\\begin{aligned}Input: x  \\\\\n",
-    "    Layer1: {x}{W} + b \\\\\n",
-    "    Output\\:layer = {\\sigma}{(Layer1)} \\\\\n",
-    "    Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)}) \\\\\n",
-    "    Loss &= tf.reduce\\_sum(Loss\\_i)\n",
+    ">\\begin{equation}\n",
+    "Input: x      \n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "Layer1: {x}{W} + b    \n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
+    "Output\\:layer = {\\sigma}{(Layer1)}   \n",
+    "\\end{equation}\n",
+    "\\begin{aligned}\n",
+    "Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)})\n",
     "\\end{aligned}\n",
-    "  \n",
-    "  \n",
-    "\n",
+    "\\begin{aligned}\n",
+    "Loss &= tf.reduce\\_sum(Loss\\_i)     \n",
+    "\\end{aligned}\n",
+    "       \n",
     " \n",
     " We want to compute that  \n",
     " >\\begin{aligned}\n",
@@ -45,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -262,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -283,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -327,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -352,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -376,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -398,63 +405,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:     0\t Loss:  434.12061\t Acc: 35.64%\n",
-      "Step:    10\t Loss:  122.06409\t Acc: 84.16%\n",
-      "Step:    20\t Loss:   85.94774\t Acc: 86.14%\n",
-      "Step:    30\t Loss:   70.19664\t Acc: 88.12%\n",
-      "Step:    40\t Loss:   60.02964\t Acc: 90.10%\n",
-      "Step:    50\t Loss:   52.76192\t Acc: 93.07%\n",
-      "Step:    60\t Loss:   47.31219\t Acc: 94.06%\n",
-      "Step:    70\t Loss:   43.08557\t Acc: 95.05%\n",
-      "Step:    80\t Loss:   39.71006\t Acc: 97.03%\n",
-      "Step:    90\t Loss:   36.94410\t Acc: 97.03%\n",
-      "Step:   100\t Loss:   34.62762\t Acc: 97.03%\n",
-      "Step:   110\t Loss:   32.65193\t Acc: 99.01%\n",
-      "Step:   120\t Loss:   30.94109\t Acc: 99.01%\n",
-      "Step:   130\t Loss:   29.44057\t Acc: 99.01%\n",
-      "Step:   140\t Loss:   28.11025\t Acc: 99.01%\n",
-      "Step:   150\t Loss:   26.91994\t Acc: 99.01%\n",
-      "Step:   160\t Loss:   25.84645\t Acc: 99.01%\n",
-      "Step:   170\t Loss:   24.87170\t Acc: 99.01%\n",
-      "Step:   180\t Loss:   23.98131\t Acc: 99.01%\n",
-      "Step:   190\t Loss:   23.16373\t Acc: 99.01%\n",
-      "Step:   200\t Loss:   22.40954\t Acc: 99.01%\n",
-      "Step:   210\t Loss:   21.71097\t Acc: 99.01%\n",
-      "Step:   220\t Loss:   21.06155\t Acc: 100.00%\n",
-      "Step:   230\t Loss:   20.45581\t Acc: 100.00%\n",
-      "Step:   240\t Loss:   19.88914\t Acc: 100.00%\n",
-      "Step:   250\t Loss:   19.35758\t Acc: 100.00%\n",
-      "Step:   260\t Loss:   18.85771\t Acc: 100.00%\n",
-      "Step:   270\t Loss:   18.38656\t Acc: 100.00%\n",
-      "Step:   280\t Loss:   17.94155\t Acc: 100.00%\n",
-      "Step:   290\t Loss:   17.52041\t Acc: 100.00%\n",
-      "Step:   300\t Loss:   17.12114\t Acc: 100.00%\n",
-      "Step:   310\t Loss:   16.74195\t Acc: 100.00%\n",
-      "Step:   320\t Loss:   16.38125\t Acc: 100.00%\n",
-      "Step:   330\t Loss:   16.03765\t Acc: 100.00%\n",
-      "Step:   340\t Loss:   15.70988\t Acc: 100.00%\n",
-      "Step:   350\t Loss:   15.39678\t Acc: 100.00%\n",
-      "Step:   360\t Loss:   15.09734\t Acc: 100.00%\n",
-      "Step:   370\t Loss:   14.81061\t Acc: 100.00%\n",
-      "Step:   380\t Loss:   14.53576\t Acc: 100.00%\n",
-      "Step:   390\t Loss:   14.27201\t Acc: 100.00%\n",
-      "Step:   400\t Loss:   14.01865\t Acc: 100.00%\n",
-      "Step:   410\t Loss:   13.77506\t Acc: 100.00%\n",
-      "Step:   420\t Loss:   13.54063\t Acc: 100.00%\n",
-      "Step:   430\t Loss:   13.31483\t Acc: 100.00%\n",
-      "Step:   440\t Loss:   13.09717\t Acc: 100.00%\n",
-      "Step:   450\t Loss:   12.88717\t Acc: 100.00%\n",
-      "Step:   460\t Loss:   12.68443\t Acc: 100.00%\n",
-      "Step:   470\t Loss:   12.48854\t Acc: 100.00%\n",
-      "Step:   480\t Loss:   12.29915\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   12.11592\t Acc: 100.00%\n",
+      "Step:     0\t Loss:  654.41376\t Acc: 38.61%\n",
+      "Step:    10\t Loss:  110.85894\t Acc: 88.12%\n",
+      "Step:    20\t Loss:   82.29582\t Acc: 90.10%\n",
+      "Step:    30\t Loss:   69.07486\t Acc: 90.10%\n",
+      "Step:    40\t Loss:   60.26331\t Acc: 91.09%\n",
+      "Step:    50\t Loss:   53.75750\t Acc: 94.06%\n",
+      "Step:    60\t Loss:   48.69754\t Acc: 94.06%\n",
+      "Step:    70\t Loss:   44.63366\t Acc: 94.06%\n",
+      "Step:    80\t Loss:   41.29251\t Acc: 95.05%\n",
+      "Step:    90\t Loss:   38.49323\t Acc: 96.04%\n",
+      "Step:   100\t Loss:   36.11014\t Acc: 96.04%\n",
+      "Step:   110\t Loss:   34.05315\t Acc: 96.04%\n",
+      "Step:   120\t Loss:   32.25615\t Acc: 98.02%\n",
+      "Step:   130\t Loss:   30.66969\t Acc: 99.01%\n",
+      "Step:   140\t Loss:   29.25622\t Acc: 99.01%\n",
+      "Step:   150\t Loss:   27.98675\t Acc: 99.01%\n",
+      "Step:   160\t Loss:   26.83861\t Acc: 99.01%\n",
+      "Step:   170\t Loss:   25.79381\t Acc: 99.01%\n",
+      "Step:   180\t Loss:   24.83790\t Acc: 99.01%\n",
+      "Step:   190\t Loss:   23.95915\t Acc: 99.01%\n",
+      "Step:   200\t Loss:   23.14789\t Acc: 99.01%\n",
+      "Step:   210\t Loss:   22.39610\t Acc: 99.01%\n",
+      "Step:   220\t Loss:   21.69704\t Acc: 99.01%\n",
+      "Step:   230\t Loss:   21.04500\t Acc: 100.00%\n",
+      "Step:   240\t Loss:   20.43512\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   19.86321\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   19.32564\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   18.81926\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   18.34129\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   17.88931\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   17.46115\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   17.05489\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   16.66884\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   16.30145\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   15.95136\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   15.61732\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   15.29822\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   14.99303\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   14.70082\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   14.42077\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   14.15209\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   13.89408\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   13.64610\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   13.40755\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   13.17788\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   12.95659\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   12.74322\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.53731\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   12.33849\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.14637\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
@@ -564,7 +571,7 @@
        "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
