--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -239,7 +239,7 @@
    "metadata": {},
    "source": [
     "# sigma_prime Function:\n",
-    "> derivative of the sigmoid function <br /><br />\n",
+    "> derivative of the sigmoid(logistic) function <br /><br />\n",
     "> \\begin{aligned}\n",
     "\\sigma'(x) = \\sigma(x) * (1 - \\sigma(x))\n",
     "\\end{aligned}\n"
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true
    },
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -405,63 +405,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:     0\t Loss:  654.41376\t Acc: 38.61%\n",
-      "Step:    10\t Loss:  110.85894\t Acc: 88.12%\n",
-      "Step:    20\t Loss:   82.29582\t Acc: 90.10%\n",
-      "Step:    30\t Loss:   69.07486\t Acc: 90.10%\n",
-      "Step:    40\t Loss:   60.26331\t Acc: 91.09%\n",
-      "Step:    50\t Loss:   53.75750\t Acc: 94.06%\n",
-      "Step:    60\t Loss:   48.69754\t Acc: 94.06%\n",
-      "Step:    70\t Loss:   44.63366\t Acc: 94.06%\n",
-      "Step:    80\t Loss:   41.29251\t Acc: 95.05%\n",
-      "Step:    90\t Loss:   38.49323\t Acc: 96.04%\n",
-      "Step:   100\t Loss:   36.11014\t Acc: 96.04%\n",
-      "Step:   110\t Loss:   34.05315\t Acc: 96.04%\n",
-      "Step:   120\t Loss:   32.25615\t Acc: 98.02%\n",
-      "Step:   130\t Loss:   30.66969\t Acc: 99.01%\n",
-      "Step:   140\t Loss:   29.25622\t Acc: 99.01%\n",
-      "Step:   150\t Loss:   27.98675\t Acc: 99.01%\n",
-      "Step:   160\t Loss:   26.83861\t Acc: 99.01%\n",
-      "Step:   170\t Loss:   25.79381\t Acc: 99.01%\n",
-      "Step:   180\t Loss:   24.83790\t Acc: 99.01%\n",
-      "Step:   190\t Loss:   23.95915\t Acc: 99.01%\n",
-      "Step:   200\t Loss:   23.14789\t Acc: 99.01%\n",
-      "Step:   210\t Loss:   22.39610\t Acc: 99.01%\n",
-      "Step:   220\t Loss:   21.69704\t Acc: 99.01%\n",
-      "Step:   230\t Loss:   21.04500\t Acc: 100.00%\n",
-      "Step:   240\t Loss:   20.43512\t Acc: 100.00%\n",
-      "Step:   250\t Loss:   19.86321\t Acc: 100.00%\n",
-      "Step:   260\t Loss:   19.32564\t Acc: 100.00%\n",
-      "Step:   270\t Loss:   18.81926\t Acc: 100.00%\n",
-      "Step:   280\t Loss:   18.34129\t Acc: 100.00%\n",
-      "Step:   290\t Loss:   17.88931\t Acc: 100.00%\n",
-      "Step:   300\t Loss:   17.46115\t Acc: 100.00%\n",
-      "Step:   310\t Loss:   17.05489\t Acc: 100.00%\n",
-      "Step:   320\t Loss:   16.66884\t Acc: 100.00%\n",
-      "Step:   330\t Loss:   16.30145\t Acc: 100.00%\n",
-      "Step:   340\t Loss:   15.95136\t Acc: 100.00%\n",
-      "Step:   350\t Loss:   15.61732\t Acc: 100.00%\n",
-      "Step:   360\t Loss:   15.29822\t Acc: 100.00%\n",
-      "Step:   370\t Loss:   14.99303\t Acc: 100.00%\n",
-      "Step:   380\t Loss:   14.70082\t Acc: 100.00%\n",
-      "Step:   390\t Loss:   14.42077\t Acc: 100.00%\n",
-      "Step:   400\t Loss:   14.15209\t Acc: 100.00%\n",
-      "Step:   410\t Loss:   13.89408\t Acc: 100.00%\n",
-      "Step:   420\t Loss:   13.64610\t Acc: 100.00%\n",
-      "Step:   430\t Loss:   13.40755\t Acc: 100.00%\n",
-      "Step:   440\t Loss:   13.17788\t Acc: 100.00%\n",
-      "Step:   450\t Loss:   12.95659\t Acc: 100.00%\n",
-      "Step:   460\t Loss:   12.74322\t Acc: 100.00%\n",
-      "Step:   470\t Loss:   12.53731\t Acc: 100.00%\n",
-      "Step:   480\t Loss:   12.33849\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   12.14637\t Acc: 100.00%\n",
+      "Step:     0\t Loss:  460.25620\t Acc: 39.60%\n",
+      "Step:    10\t Loss:  115.17030\t Acc: 82.18%\n",
+      "Step:    20\t Loss:   81.62040\t Acc: 89.11%\n",
+      "Step:    30\t Loss:   67.03764\t Acc: 91.09%\n",
+      "Step:    40\t Loss:   58.01501\t Acc: 92.08%\n",
+      "Step:    50\t Loss:   51.66171\t Acc: 93.07%\n",
+      "Step:    60\t Loss:   46.84314\t Acc: 96.04%\n",
+      "Step:    70\t Loss:   43.02425\t Acc: 97.03%\n",
+      "Step:    80\t Loss:   39.90575\t Acc: 97.03%\n",
+      "Step:    90\t Loss:   37.30070\t Acc: 97.03%\n",
+      "Step:   100\t Loss:   35.08412\t Acc: 97.03%\n",
+      "Step:   110\t Loss:   33.16888\t Acc: 97.03%\n",
+      "Step:   120\t Loss:   31.49230\t Acc: 97.03%\n",
+      "Step:   130\t Loss:   30.00830\t Acc: 97.03%\n",
+      "Step:   140\t Loss:   28.68227\t Acc: 97.03%\n",
+      "Step:   150\t Loss:   27.48777\t Acc: 97.03%\n",
+      "Step:   160\t Loss:   26.40426\t Acc: 98.02%\n",
+      "Step:   170\t Loss:   25.41552\t Acc: 98.02%\n",
+      "Step:   180\t Loss:   24.50853\t Acc: 100.00%\n",
+      "Step:   190\t Loss:   23.67274\t Acc: 100.00%\n",
+      "Step:   200\t Loss:   22.89943\t Acc: 100.00%\n",
+      "Step:   210\t Loss:   22.18137\t Acc: 100.00%\n",
+      "Step:   220\t Loss:   21.51245\t Acc: 100.00%\n",
+      "Step:   230\t Loss:   20.88746\t Acc: 100.00%\n",
+      "Step:   240\t Loss:   20.30198\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   19.75214\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   19.23460\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   18.74644\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   18.28510\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   17.84829\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   17.43400\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   17.04045\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   16.66602\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   16.30930\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   15.96897\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   15.64388\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   15.33297\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   15.03530\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   14.74998\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   14.47623\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   14.21332\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   13.96059\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   13.71743\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   13.48329\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   13.25764\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   13.04002\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   12.82998\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.62712\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   12.43105\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.24143\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
@@ -571,7 +571,7 @@
        "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
